--- a/app/globals.css
+++ b/app/globals.css
@@ -6,6 +6,10 @@
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
+  --swiper-navigation-size: 10px;
+
+  --swiper-navigation-color: #3B2313;
+  --swiper-pagination-color: red;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -31,3 +35,15 @@ body {
     text-wrap: balance;
   }
 }
+
+.swiper-button-prev{
+  color: black;
+}
+.swiper-button-next{
+  color: black;
+  font-size: 10px;
+  
+  
+}
+
+
